# RAG_PMG

./: .gitignore  Pmg_lds.md  app.py  hello.txt  output.md  pyproject.toml
Notebooks/: advanced_retrieval.ipynb  qa-pair.ipynb
RAG_PMG/: app.py  pre_process.ipynb
RAG_PMG/data/: Pmg_lds.md
RAG_PMG/static/: main.css
data/: Pmg_lds.md  chunks.json
templates/: index.html
utils/: Pmg_lds.md  app.ipynb
